<resources>
    <string name="app_name">Mobile99_Final_Project</string>
    <string name="username_textview">Username</string>
    <string name="password_textview">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="confirm_password_textview">Confirm password</string>
    <string name="phone_number_textview">Phone number</string>
    <string name="create_account">create account</string>
    <string name="ad_title">title</string>
    <string name="ad_owner">owner</string>
    <string name="ad_cat">category</string>
    <string name="title_t">Title:</string>
    <string name="category_t">Category:</string>
    <string name="description_t">Description:</string>
    <string name="create_advertisement">Create Advertisement</string>
    <string name="filter">filter</string>
    <string name="categories_string">Categories</string>
    <string name="my_profile_string">User :</string>
    <string name="log_out_string">Log Out</string>
    <string name="my_advertisements">My Advertisements</string>
    <string name="search">Search</string>
    <string name="previous">previous</string>
    <string name="description">description</string>
    <string name="reload">Reload</string>
    <string name="next">Next</string>
    <string name="menu_string">Menu</string>
    <string name="login_tv_title">Login App</string>
    <string name="signupfirst">Don\'t have an account ?</string>
    <string name="signupsecond">Sign Up!</string>
    <string name="signup_tv_title">Create Account</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>