<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_categories"
                android:title="@string/categories_string" />
        <item
                android:id="@+id/nav_my_advertisement"
                android:title="@string/my_advertisements" />
        <item
                android:id="@+id/nav_create_advertisement"
                android:title="@string/create_advertisement" />
        <item
                android:id="@+id/nav_search"
                android:title="@string/search" />
        <item
                android:id="@+id/nav_logout"
                android:title="@string/log_out_string" />
    </group>
</menu>