<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.mobile99_final_project.NavPack.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_categories"
            android:name="com.example.mobile99_final_project.NavPack.ui.categories.CategoriesFragment"
            android:label="@string/categories_string"
            tools:layout="@layout/fragment_categories" />

    <fragment
            android:id="@+id/nav_my_advertisement"
            android:name="com.example.mobile99_final_project.NavPack.ui.my_advertisement.UserAdvertisementsFragment"
            android:label="@string/my_advertisements"
            tools:layout="@layout/fragment_user_advertisements" />

    <fragment
            android:id="@+id/nav_create_advertisement"
            android:name="com.example.mobile99_final_project.NavPack.ui.create_advertisement.AdvertisementCreationFragment"
            android:label="@string/create_advertisement"
            tools:layout="@layout/fragment_advertisement_creation" />

    <fragment
            android:id="@+id/nav_search"
            android:name="com.example.mobile99_final_project.NavPack.ui.search.SearchFragment"
            android:label="@string/search"
            tools:layout="@layout/fragment_search" />

    <fragment
            android:id="@+id/nav_logout"
            android:name="com.example.mobile99_final_project.NavPack.ui.home.LogoutFragment"
            android:label="@string/log_out_string"
            tools:layout="@layout/fragment_logout" />



</navigation>