<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="10dp"
        tools:context=".AdvertisementViewActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/ad_details_imageView"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="10dp">

                        <TextView
                                android:id="@+id/ad_details_title_textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="3dp"
                                android:text="@string/ad_title"
                                android:textSize="24sp" />

                        <TextView
                                android:id="@+id/ad_details_owner_textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="3dp"
                                android:text="@string/ad_owner" />

                        <TextView
                                android:id="@+id/ad_details_cat_textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="3dp"
                                android:text="@string/ad_cat" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
                android:id="@+id/ad_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>